// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingPrivateKeys Dialog is false Renders the component 1`] = `
<v-form-stub>
  <v-container-stub tag="div">
    <v-row-stub tag="div" align="center" justify="center" class="mt-4 mb-4">
      <v-col-stub sm="8" tag="div">
        <v-card-stub loaderheight="4" tag="div" class="pb-0 elevation-0">
          <div class="d-flex pa-0 align-center">
            <v-spacer-stub tag="div"></v-spacer-stub>
            <v-spacer-stub tag="div"></v-spacer-stub> <span><privatekeyformdialog-stub keyobject="[object Object]" createkey="true" action="private" data-test="privateKeyFormDialogFirst-component"></privatekeyformdialog-stub></span>
          </div>
          <v-data-table-stub mobilebreakpoint="600" items="[object Object],[object Object]" options="[object Object]" sortby="" sortdesc="" customsort="[Function]" page="1" itemsperpage="10" groupby="" groupdesc="" customgroup="[Function]" locale="en-US" customfilter="[Function]" serveritemslength="2" itemkey="id" value="" expanded="" noresultstext="$vuetify.dataIterator.noResultsText" nodatatext="$vuetify.noDataText" loadingtext="$vuetify.dataIterator.loadingText" hidedefaultfooter="true" selectablekey="isSelectable" loaderheight="4" headers="[object Object],[object Object],[object Object]" expandicon="$expand" itemclass="" data-test="dataTable-field"></v-data-table-stub>
        </v-card-stub>
      </v-col-stub>
    </v-row-stub>
  </v-container-stub>
  <v-dialog-stub opendelay="0" closedelay="0" contentclass="" origin="center center" persistent="true" retainfocus="true" transition="dialog-transition" width="500">
    <v-card-stub loaderheight="4" tag="div">
      <v-card-title-stub tag="div" class="headline grey lighten-2">
        Privacy Policy
      </v-card-title-stub>
      <v-card-text-stub tag="div" class="mt-4">
        The private key is never submitted to ShellHub, it gets stored in your browser’s
        local storage, only the public key gets uploaded and stored by ShellHub.
      </v-card-text-stub>
      <v-divider-stub></v-divider-stub>
      <v-card-actions-stub tag="div" class="px-6">
        <v-checkbox-stub errorcount="1" errormessages="" messages="" rules="" successmessages="" backgroundcolor="" label="Never show this again" ripple="true" valuecomparator="[Function]" indeterminateicon="$checkboxIndeterminate" officon="$checkboxOff" onicon="$checkboxOn"></v-checkbox-stub>
        <v-spacer-stub tag="div"></v-spacer-stub>
        <v-btn-stub color="primary" tag="button" activeclass="" text="true" type="button" data-test="gotIt-btn">
          Got it
        </v-btn-stub>
      </v-card-actions-stub>
    </v-card-stub>
  </v-dialog-stub>
</v-form-stub>
`;

exports[`SettingPrivateKeys Dialog is true Renders the component 1`] = `
<v-form-stub>
  <v-container-stub tag="div">
    <v-row-stub tag="div" align="center" justify="center" class="mt-4 mb-4">
      <v-col-stub sm="8" tag="div">
        <v-card-stub loaderheight="4" tag="div" class="pb-0 elevation-0">
          <div class="d-flex pa-0 align-center">
            <v-spacer-stub tag="div"></v-spacer-stub>
            <v-spacer-stub tag="div"></v-spacer-stub> <span><privatekeyformdialog-stub keyobject="[object Object]" createkey="true" action="private" data-test="privateKeyFormDialogFirst-component"></privatekeyformdialog-stub></span>
          </div>
          <v-data-table-stub mobilebreakpoint="600" items="[object Object],[object Object]" options="[object Object]" sortby="" sortdesc="" customsort="[Function]" page="1" itemsperpage="10" groupby="" groupdesc="" customgroup="[Function]" locale="en-US" customfilter="[Function]" serveritemslength="2" itemkey="id" value="" expanded="" noresultstext="$vuetify.dataIterator.noResultsText" nodatatext="$vuetify.noDataText" loadingtext="$vuetify.dataIterator.loadingText" hidedefaultfooter="true" selectablekey="isSelectable" loaderheight="4" headers="[object Object],[object Object],[object Object]" expandicon="$expand" itemclass="" data-test="dataTable-field"></v-data-table-stub>
        </v-card-stub>
      </v-col-stub>
    </v-row-stub>
  </v-container-stub>
  <v-dialog-stub opendelay="0" closedelay="0" value="true" contentclass="" origin="center center" persistent="true" retainfocus="true" transition="dialog-transition" width="500">
    <v-card-stub loaderheight="4" tag="div">
      <v-card-title-stub tag="div" class="headline grey lighten-2">
        Privacy Policy
      </v-card-title-stub>
      <v-card-text-stub tag="div" class="mt-4">
        The private key is never submitted to ShellHub, it gets stored in your browser’s
        local storage, only the public key gets uploaded and stored by ShellHub.
      </v-card-text-stub>
      <v-divider-stub></v-divider-stub>
      <v-card-actions-stub tag="div" class="px-6">
        <v-checkbox-stub errorcount="1" errormessages="" messages="" rules="" successmessages="" backgroundcolor="" label="Never show this again" ripple="true" valuecomparator="[Function]" indeterminateicon="$checkboxIndeterminate" officon="$checkboxOff" onicon="$checkboxOn"></v-checkbox-stub>
        <v-spacer-stub tag="div"></v-spacer-stub>
        <v-btn-stub color="primary" tag="button" activeclass="" text="true" type="button" data-test="gotIt-btn">
          Got it
        </v-btn-stub>
      </v-card-actions-stub>
    </v-card-stub>
  </v-dialog-stub>
</v-form-stub>
`;
